[gd_scene load_steps=5 format=3 uid="uid://c16x6y38q2woj"]

[ext_resource type="FontFile" uid="uid://chy56ut33g38" path="res://assets/font/AsianNinja-z874L.ttf" id="1_srv4e"]
[ext_resource type="Script" path="res://scripts/button.gd" id="2_8wcot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaj6s"]
bg_color = Color(1, 0.270971, 0.598001, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v63ma"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 98.0
offset_right = 486.0
offset_bottom = 249.0
theme_override_colors/font_color = Color(0.588265, 1, 0.857895, 1)
theme_override_fonts/font = ExtResource("1_srv4e")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_aaj6s")
text = "Play"
script = ExtResource("2_8wcot")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 299.0
offset_right = 486.0
offset_bottom = 451.0
theme_override_colors/font_color = Color(0.588235, 1, 0.858824, 1)
theme_override_fonts/font = ExtResource("1_srv4e")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_v63ma")
text = "Leaderboard"

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="Button2" to="Button" method="_on_button_2_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
